完善初步功能